the background is fixed. stretched to fill the screen. auto scale._ background-repeat: no-repeat;_background-attachment: fixed;_background-position: center;_background-size: 50% 100% ;

--- a/Restaurant/Content/main.css
+++ b/Restaurant/Content/main.css
@@ -20,8 +20,8 @@ body {
     background-image: url(../images/background.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    
-    background-size: 100%;
+    background-position: center;
+    background-size: 50% 100% ;
     
     padding: 2% 6% 6% 6%;
 }
